@startuml

class Game {

}

class Map {
}

class Tile {

}

class Display {

}

class VectorImage{

}

class Window {

}

class Unit {
}


class Sprit{
}

class Image {
}

class Player{
}

class Color{
}

class Rect{
}

Map "1" *-- "0..N" Tile

Game "1" *-- "1" Map

Display "1" *.. "1" Map
Game "1" *-- "1" Display
Display "1" *.. "1" Window
Display "1" *.. "1" VectorImage
Game "1" *-- "1" VectorImage
Tile "1" *.. "0...1" Unit
Sprit "1" *-- "0...N" Image
VectorImage "1" *-- "0...N" Image
Game "1" *-- "0...N" Player

package "static map < string, Terrain* >" #DDDDDD {
  class Terrain
}

note right of Unit : member <b>string StrType</b> is used as argument in <b>Terrain::getTerrainFromName(string _name)</b>
note top of Terrain: static method <b>getTerrainFromName(string _name)</b> allows to access to the Terrain

@enduml